--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@ body {
   font-weight: 600;
 }
 
+@media only screen and (min-width: 2400px) {
+  body {
+    font-size: 16pt;
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
